# ComfyUI-ToSVG-Potracer

./: .gitignore  LICENSE  README.md  __init__ .py_live_.txt  __init__.py  potracer_node.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug---error-report.md
.github/workflows/: publish_action.yml
__EXT__/: 2025-04-03_19-17-52_snapshot.json  ComfyUI_ToSVG_Potrace_Workflow_V1.2_Snapshot.json
example_workflows/: example_ToSVG_Potracer.json  example_ToSVG_Potracer_V1.2.json  example_ToSVG_Potracer_ext_image_SVG_conversion.json
