# pyproject.toml (for Comfy Registry)

[project]
# Unique identifier for your node package. Immutable after creation on the registry.
name = "ComfyUI-ToSVG-Potracer"
description = "ComfyUI node to vectorize images using the pure Python 'potracer' library for potrace."
# Your node package's version. MUST follow semantic versioning (e.g., MAJOR.MINOR.PATCH).
version = "0.0.2" # Or adjust as needed
# license = { file = "LICENSE.txt" }
# Project dependencies. PEP 621 standard replaces requirements.txt here.
dependencies = [
    "numpy",
    "Pillow",
    "potracer"
]

[project.urls]
Repository = "https://github.com/ImagineerNL/ComfyUI-ToSVG-Potracer"

[tool.comfy]
PublisherId = "imagineernl" # Publisher ID from Comfy Registry Website
DisplayName = "ComfyUI-ToSVG-Potracer" # Display name for the Custom Node. Can be changed later
# URL pointing to an icon for your package. MUST be a direct link to an image.
# SVG, PNG, JPG or GIF (MAX. 800x400px).
Icon = "https://github.com/ImagineerNL/ComfyUI-ToSVG-Potracer/blob/main/img/potracer.jpg" #