# pyproject.toml (for Comfy Registry)

[project]
# Unique identifier for your node package. Immutable after creation on the registry.
name = "ComfyUI-ToSVG-Potracer"
description = "ComfyUI node to vectorize 2 color images like logo or text calling the pure Python 'potracer' library for potrace. Requires LATEST VERSION of  https://registry.comfy.org/nodes/ComfyUI-ToSVG to_SVG node to save as SVG. "
# Your node package's version. MUST follow semantic versioning (e.g., MAJOR.MINOR.PATCH).
version = "1.2.0" # Or adjust as needed
# license = { file = "LICENSE" }
# Project dependencies. PEP 621 standard replaces requirements.txt here.
dependencies = [
    "numpy",
    "Pillow",
    "potracer"
]

[project.urls]
Repository = "https://github.com/ImagineerNL/ComfyUI-ToSVG-Potracer"

[tool.comfy]
PublisherId = "imagineernl" # Publisher ID from Comfy Registry Website
DisplayName = "ComfyUI-ToSVG-Potracer" # Display name for the Custom Node. Can be changed later
# URL pointing to an icon for your package. MUST be a direct link to an image.
# SVG, PNG, JPG or GIF (MAX. 800x400px).
Icon = "https://raw.githubusercontent.com/ImagineerNL/ComfyUI-ToSVG-Potracer/refs/heads/main/img/potracer.jpg" #